结合登录的使用

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,179 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rl_layout">
-
-    <LinearLayout
+    <TextView
+        android:text="欢迎"
+        android:gravity="center"
+        android:textSize="25dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent" />
 
-        <LinearLayout
-            android:id="@+id/ll_user_name"
-            android:layout_below="@+id/iv_login_logo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="200dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp">
-
-            <LinearLayout
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/login_user"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="AD账号"
-                    android:layout_marginLeft="5dp"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/root_color_qian"
-                    android:textSize="15dp"/>
-            </LinearLayout>
-
-            <EditText
-                android:id="@+id/et_user_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                android:padding="5dp"
-                android:maxLength="16"
-                android:digits="@string/input_type"
-                android:background="@null"
-                android:layout_gravity="center_vertical" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/view_line"
-            android:layout_below="@+id/ll_user_name"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="#88cccccc"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"/>
-
-        <LinearLayout
-            android:id="@+id/ll_password"
-            android:layout_below="@+id/view_line"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp">
-
-            <LinearLayout
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:scaleType="center"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/login_password"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="密码"
-                    android:layout_marginLeft="5dp"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/root_color_qian"
-                    android:textSize="15dp"/>
-            </LinearLayout>
-
-            <EditText
-                android:id="@+id/et_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:digits="@string/input_type"
-                android:inputType="textPassword"
-                android:textSize="15dp"
-                android:maxLength="16"
-                android:background="@null"
-                android:layout_gravity="center_vertical" />
-        </LinearLayout>
-
-        <View
-            android:layout_below="@+id/ll_password"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="#88cccccc"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"/>
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_marginTop="36dp"
-            android:layout_width="match_parent"
-            android:layout_height="42dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:text="登录"
-            android:textSize="15dp"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:background="@drawable/login_btn_bg"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="90dp"
-            android:layout_marginRight="90dp"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/tv_register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14dp"
-                android:layout_marginLeft="10dp"
-                android:text="@string/login_register"/>
-
-            <TextView
-                android:id="@+id/tv_forget_psd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:text="@string/forget_psd"
-                android:textColor="@color/root_color_qian"
-                android:textSize="14dp" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14dp"
-                android:text="登录即代表您同意"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/root_color_qian"
-                android:text="《心寻租借平台的服务协议》"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
 </RelativeLayout>
